# UAV_Approach

devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/uav_gps_package/: CMakeLists.txt  package.xml
src/uav_gps_package/scripts/: deepfaceDEMO.py  emotion_recognition.py  uav_gps.py
